--- a/css-examples/index.html
+++ b/css-examples/index.html
@@ -9,15 +9,20 @@
   <link rel="stylesheet" href="/css-examples/styles/reset.css">
   <link rel="stylesheet" href="/css-examples/styles/image-styles.css">
   <link rel="stylesheet" href="/css-examples/styles/svg-object.css">
+  <link rel="stylesheet" href="/css-examples/styles/sprites.css">
 </head>
 <body>
-  <div class="full-screen">
-    <div class="image-container">
+  <!-- <div class="full-screen">
+    <div class="image-container"> -->
       <!-- <img src="/css-examples/images/tv.svg" alt="logo" /> -->
-      <object type="image/svg+xml" data="/css-examples/images/tv.svg" class="logo">
-        Fallback Image Logo <!-- fallback image in CSS -->
+ <!--      <object type="image/svg+xml" data="/css-examples/images/tv.svg" class="logo">
+        Fallback Image Logo 
       </object>
     </div>
-  </div>
+  </div> -->
+  <i class="sprite sprite-react"></i>
+  <i class="sprite sprite-cypress-_1_"></i>
+  <i class="sprite sprite-mocha-logo"></i>
+  <i class="sprite sprite-selenium-icon"></i>
 </body>
 </html>
