--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
       </section>
     </main>
     <!-- main-section end -->
+    <script type="module" src="/src/js/api.js"></script>
     <script type="module" src="/src/js/ui.js"></script>
+    <script type="module" src="/src/js/shows.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
 
