Add page js for routing

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
       </section>
     </main>
     <!-- main-section end -->
+    <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script type="module" src="/src/js/routes.js"></script>
     <script type="module" src="/src/js/api.js"></script>
     <script type="module" src="/src/js/ui.js"></script>
     <script type="module" src="/src/js/shows.js"></script>
