--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- styles -->
-    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <!-- navbar -->
@@ -184,11 +184,12 @@
     </main>
     <!-- main-section end -->
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-    <script type="module" src="/src/js/routes.js"></script>
-    <script type="module" src="/src/js/api.js"></script>
-    <script type="module" src="/src/js/ui.js"></script>
-    <script type="module" src="/src/js/shows.js"></script>
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/js/detail.js"></script>
+    <script type="module" src="/js/routes.js"></script>
+    <script type="module" src="/js/api.js"></script>
+    <script type="module" src="/js/ui.js"></script>
+    <script type="module" src="/js/shows.js"></script>
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
 
