--- a/index.html
+++ b/index.html
@@ -30,32 +30,7 @@
     <!-- main–section -->
     <main>
       <section id="show-section" class="show-section">
-        <div class="card principal">
-          <header class="card-header">
-            <h2>First movie</h2>
-          </header>
-          <div class="card-content">
-            <div class="card-content-image">
-              <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-            <div class="card-content-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus, ab nam, ea quod nihil maxime soluta tempore, quo pariatur explicabo beatae possimus expedita sunt nulla aspernatur! Harum, itaque, quia.
-              </p>
-              <div class="rating-container">
-                <button class="icon">
-                  <i class="fas fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card principal">
+        <!-- <div class="card principal">
           <header class="card-header">
             <h2>First movie</h2>
           </header>
@@ -105,82 +80,25 @@
             </div>
           </div>
         </div>
-        <div class="card secondary close">
-          <header class="card-header">
-            <h2>First movie</h2>
-          </header>
-          <div class="card-content">
-            <div class="card-content-image">
-              <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-            <div class="card-content-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus, ab nam, ea quod nihil maxime soluta tempore, quo pariatur explicabo beatae possimus expedita sunt nulla aspernatur! Harum, itaque, quia.
-              </p>
-              <div class="rating-container">
-                <button class="icon">
-                  <i class="fas fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card secondary close">
-          <header class="card-header">
-            <h2>First movie</h2>
-          </header>
-          <div class="card-content">
-            <div class="card-content-image">
-              <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-            <div class="card-content-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus, ab nam, ea quod nihil maxime soluta tempore, quo pariatur explicabo beatae possimus expedita sunt nulla aspernatur! Harum, itaque, quia.
-              </p>
-              <div class="rating-container">
-                <button class="icon">
-                  <i class="fas fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card secondary close">
-          <header class="card-header">
-            <h2>First movie</h2>
-          </header>
-          <div class="card-content">
-            <div class="card-content-image">
-              <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-            <div class="card-content-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus, ab nam, ea quod nihil maxime soluta tempore, quo pariatur explicabo beatae possimus expedita sunt nulla aspernatur! Harum, itaque, quia.
-              </p>
-              <div class="rating-container">
-                <button class="icon">
-                  <i class="fas fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+      -->
       </section>
+      <!-- comment-form -->
+      <section id="detailSection" class="detail-section">
+        <div id="detail" class="detail-content"></div>
+        <div class="quotes-list">
+          <h2>Quotes</h2>
+          <div id="quoteList">
+          </div>
+        </div>
+        <form id="quote-form" class="quote-form" novalidate>
+          <div class="quote-input">
+            <label for="quote">Quote of this show</label>
+            <input id="quote" placeholder="Add your quote" class="input primary" type="text">
+          </div>
+          <button type="submit" class="button primary">Search</button>
+        </form>
+      </section>
+      <!-- comment-form end -->
     </main>
     <!-- main-section end -->
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
