--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     </section>
     <!-- comment-form end -->
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script type="module" src="/js/quotesForm.js"></script>
     <script type="module" src="/js/detail.js"></script>
     <script type="module" src="/js/routes.js"></script>
     <script type="module" src="/js/api.js"></script>
