--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
       </form>
     </section>
     <!-- comment-form end -->
+    <!-- loader -->
+    <div id="lodaer" class="loader-container">
+      <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
+    <!-- Loader end -->
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
     <script type="module" src="/js/quotesForm.js"></script>
     <script type="module" src="/js/detail.js"></script>
