Add more info in the comments

--- a/interview-questions/classes-prototypes.html
+++ b/interview-questions/classes-prototypes.html
@@ -41,7 +41,7 @@
         console.log(`This is an Animal: ${this.name}`);
       }
     }
-
+    // mirar el prototyope extendido
     class Dog extends Animal {
       constructor(name, age) {
         super(name, age);
