--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
       <div class="navbar-logo">
         <a href="/">TVMAZE</a>
       </div>
-      <div class="filter-container">
-        <form id="search-form" class="filter-input">
-          <input placeholder="search your serie" class="input search" type="text">
-          <button type="submit" class="button search">Search</button>
-        </form>
-      </div>
-      <div class="navbar-icon">
-        <i id="navbar-search" class="fas fa-search"></i>
-        <i id="navbar-close" class="fas fa-times"></i>
+      <div class="navbar-right-actions">
+        <div class="filter-container">
+          <form id="search-form" class="filter-input">
+            <input placeholder="search your serie" class="input search" type="text">
+            <button type="submit" class="button search">Search</button>
+          </form>
+        </div>
+        <div class="navbar-icon">
+          <i id="navbar-search" class="fas fa-search"></i>
+          <i id="navbar-close" class="fas fa-times"></i>
+        </div>
       </div>
     </navbar>
     <!-- navbar-end -->
