Improve css examples

--- a/css-examples/index.html
+++ b/css-examples/index.html
@@ -13,9 +13,15 @@
 </head>
 <body>
   <!-- <div class="full-screen">
-    <div class="image-container"> -->
-      <!-- <img src="/css-examples/images/tv.svg" alt="logo" /> -->
- <!--      <object type="image/svg+xml" data="/css-examples/images/tv.svg" class="logo">
+    <div class="image-container">
+      <img src="/css-examples/images/tv.svg" alt="logo" />
+    </div>
+  </div> -->
+
+  <!-- <div class="full-screen">
+    <div class="image-container">
+      <img src="/css-examples/images/tv.svg" alt="logo" />
+      <object type="image/svg+xml" data="/css-examples/images/tv.svg" class="logo">
         Fallback Image Logo 
       </object>
     </div>
