--- a/responsive-images/index.html
+++ b/responsive-images/index.html
@@ -18,8 +18,8 @@
 <body>
   <h1>Hello world</h1>
   <input type="tel">
-  <!-- Ejemplo srcset
-  <img
+  <!-- Ejemplo srcset -->
+  <!-- <img
     src="yacht_race@tablet.jpg"
     srcset="
       yacht_race@mobile.jpg 320w,
@@ -27,10 +27,9 @@
       yacht_race@hires.jpg 1280w,
     "
     alt="obama"
-  >
-  -->
+  > -->
   <!-- ejemplo con picture -->
-  <picture>
+  <!-- <picture>
     <source
       srcset="
         yacht_race@mobile.jpg 320w,
@@ -44,7 +43,7 @@
       media="(min-width: 320px)"
     >
     <img src="obama-100-art.jpg" alt="obama">
-  </picture>
+  </picture> -->
 </body>
 </html>
 
