Fix css and add form validation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>
       <div class="navbar-right-actions">
         <div class="filter-container">
-          <form id="search-form" class="filter-input">
-            <input placeholder="search your serie" class="input search" type="text">
+          <form id="search-form" class="filter-input" novalidate>
+            <input data-pattern-mismatch="Input invalid" required placeholder="search your serie" class="input search" type="text">
             <button type="submit" class="button search">Search</button>
           </form>
         </div>
