--- a/interview-questions/event-bubling.html
+++ b/interview-questions/event-bubling.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Classes prototypes</title>
+  <title>Event bubbling</title>
 </head>
 <body>
   <div id="container">
