--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <label for="quote">Quote of this show</label>
           <input id="quote" placeholder="Add your quote" class="input primary" type="text">
         </div>
-        <button type="submit" class="button primary">Search</button>
+        <button type="submit" class="button primary">Add quote</button>
       </form>
     </section>
     <!-- comment-form end -->
