--- a/css-examples/index.html
+++ b/css-examples/index.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>TVMaze shows</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css-examples/styles/reset.css">
-  <link rel="stylesheet" href="/css-examples/styles/image-styles.css">
-  <link rel="stylesheet" href="/css-examples/styles/svg-object.css">
-  <link rel="stylesheet" href="/css-examples/styles/sprites.css">
-</head>
-<body>
-  <!-- <div class="full-screen">
-    <div class="image-container">
-      <img src="/css-examples/images/tv.svg" alt="logo" />
+  <head>
+    <title>CSS Examples</title>
+    <link rel="stylesheet" href="sprite.css">
+  </head>
+  <body class="no-flexbox">
+    <!-- <i class="sprite sprite-logo"></i>
+    <i class="sprite sprite-selenium_"></i> -->
+    <div class="flex-class">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, ipsum nulla molestias ex, nam id rerum reprehenderit ut suscipit minus fugiat similique quas nobis, nisi, maiores aliquid necessitatibus! Neque, reiciendis!</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro iusto, ipsam architecto temporibus aliquam voluptatum voluptates fugit dolorem sunt eius, quod quaerat quis! Cum illo sapiente quibusdam iste recusandae facilis.</p>
     </div>
-  </div> -->
-
-  <!-- <div class="full-screen">
-    <div class="image-container">
-      <img src="/css-examples/images/tv.svg" alt="logo" />
-      <object type="image/svg+xml" data="/css-examples/images/tv.svg" class="logo">
-        Fallback Image Logo 
-      </object>
-    </div>
-  </div> -->
-  <i class="sprite sprite-react"></i>
-  <i class="sprite sprite-cypress-_1_"></i>
-  <i class="sprite sprite-mocha-logo"></i>
-  <i class="sprite sprite-selenium-icon"></i>
-</body>
+  </body>
 </html>
