--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- styles -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
   </head>
   <body>
     <!-- navbar -->
-    <navbar id="navbar" class="app-navbar no-search">
+    <navbar id="navbar" class="app-navbar no-search filter">
       <div class="navbar-logo">
         <a href="/">TVMAZE</a>
       </div>
@@ -31,96 +31,11 @@
     <!-- navbar-end -->
     <!-- main–section -->
     <main>
-      <section id="show-section" class="show-section">
-        <!-- <div class="card principal">
-          <header class="card-header">
-            <h2>First movie</h2>
-          </header>
-          <div class="card-content">
-            <div class="card-content-image">
-              <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-            <div class="card-content-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus, ab nam, ea quod nihil maxime soluta tempore, quo pariatur explicabo beatae possimus expedita sunt nulla aspernatur! Harum, itaque, quia.
-              </p>
-              <div class="rating-container">
-                <button class="icon">
-                  <i class="fas fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="test-card" class="card secondary close">
-          <header class="card-header">
-            <h2>First movie</h2>
-          </header>
-          <div class="card-content">
-            <div class="card-content-image">
-              <img src="https://homepages.cae.wisc.edu/~ece533/images/airplane.png">
-            </div>
-            <div class="card-content-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus, ab nam, ea quod nihil maxime soluta tempore, quo pariatur explicabo beatae possimus expedita sunt nulla aspernatur! Harum, itaque, quia.
-              </p>
-              <div class="rating-container">
-                <button class="icon">
-                  <i class="fas fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-                <button class="icon">
-                  <i class="far fa-star"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      -->
-      </section>
     </main>
     <!-- main-section end -->
-    <!-- comment-form -->
-    <section id="detailSection" class="detail-section">
-      <div id="detail" class="detail-content"></div>
-      <div class="quotes-list">
-        <h2>Quotes</h2>
-        <div id="quoteList">
-        </div>
-      </div>
-      <form id="quote-form" class="quote-form" novalidate>
-        <div class="quote-input">
-          <label for="quote">Quote of this show</label>
-          <input id="quote" placeholder="Add your quote" class="input primary" type="text">
-        </div>
-        <button type="submit" class="button primary">Add quote</button>
-      </form>
-    </section>
-    <!-- comment-form end -->
-    <!-- loader -->
-    <div id="lodaer" class="loader-container">
-      <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-    </div>
-    <!-- Loader end -->
-    <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-    <script type="module" src="/js/quotesForm.js"></script>
-    <script type="module" src="/js/detail.js"></script>
-    <script type="module" src="/js/routes.js"></script>
-    <script type="module" src="/js/api.js"></script>
-    <script type="module" src="/js/ui.js"></script>
-    <script type="module" src="/js/shows.js"></script>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/src/js/ui.js"></script>
+    <script type="module" src="/src/js/shows.js"></script>
+    <script type="module" src="/src/js/navbar.js"></script>
+    <script type="module" src="/src/js/api.js"></script>
   </body>
 </html>
-
-
-
-
-
-
