eslint and storage examples

--- a/solution/index.html
+++ b/solution/index.html
@@ -109,6 +109,7 @@
     </div>
     <!-- Loader end -->
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script type="module" src="/js/quotesForm.js"></script>
     <script type="module" src="/js/detail.js"></script>
     <script type="module" src="/js/routes.js"></script>
