--- a/css-examples/responsive-images.html
+++ b/css-examples/responsive-images.html
@@ -11,23 +11,34 @@
   </style>
 </head>
 <body>
-  <!-- <img
+  <img
     src="img/yacht_race@tablet.jpg"
     srcset="
       img/yacht_race@mobile.jpg 320w,
       img/yacht_race@tablet.jpg 768w,
     "
-  /> -->
-  <picture>
+  />
+  <!-- <picture>
     <source
       srcset="
-        img/yacht_race@mobile.jpg 320w,
-        img/yacht_race@tablet.jpg 768w,
+        img/yacht_race@mobile.jpg 420w,
+        img/yacht_race@tablet.jpg 868w,
       "
       media="(min-width: 768px)"
     >
     <source srcset="img/obama-500.jpg" media="(min-width: 320px)">
     <img src="img/obama-100-art.jpg" alt="obama" />
-  </picture>
+  </picture> -->
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
