--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- styles -->
+    <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/styles.css">
   </head>
   <body>
     <!-- navbar -->
-    <navbar id="navbar" class="app-navbar no-search filter">
+    <nav id="navbar" class="app-navbar no-search filter">
       <div class="navbar-logo">
         <a href="/">TVMAZE</a>
       </div>
@@ -27,7 +28,7 @@
           <i id="navbar-close" class="fas fa-times"></i>
         </div>
       </div>
-    </navbar>
+    </nav>
     <!-- navbar-end -->
     <!-- main–section -->
     <main>
@@ -35,7 +36,7 @@
     <!-- main-section end -->
     <!-- comment-form -->
     <section id="detailSection" class="detail-section">
-      <div id="detail" class="detail-content"></div>
+      <!-- <div id="detail" class="detail-content"></div>
       <div class="quotes-list">
         <h2>Quotes</h2>
         <div id="quoteList">
@@ -47,7 +48,7 @@
           <input required id="quote" placeholder="Add your quote" class="input primary" type="text">
         </div>
         <button type="submit" class="button primary">Add quote</button>
-      </form>
+      </form> -->
     </section>
     <!-- comment-form end -->
     <!-- loader -->
